--- a/requirements.txt
+++ b/requirements.txt
@@ -1,124 +1,11 @@
-ansible-base==2.10.8
-apache-libcloud==3.2.0
-apturl==0.5.2
-argcomplete==1.8.1
 asgiref==3.5.2
-attrs==22.1.0
-Babel==2.8.0
-bcrypt==3.2.0
-blinker==1.4
-Brlapi==0.8.3
-certifi==2020.6.20
-chardet==4.0.0
-click==8.0.3
-colorama==0.4.5
-command-not-found==0.3
-coverage==6.4.4
-cryptography==3.4.8
-cupshelpers==1.0
-dbus-python==1.2.18
-defer==1.0.6
-distro==1.7.0
-distro-info===1.1build1
-Django==4.1
-dnspython==2.1.0
-docker==5.0.3
-docker-compose==1.29.2
-dockerpty==0.4.1
-docopt==0.6.2
-duplicity==0.8.21
-exceptiongroup==1.0.0
-fasteners==0.14.1
-flake8==5.0.4
-future==0.18.2
-httplib2==0.20.2
-idna==3.3
-importlib-metadata==4.6.4
-iniconfig==1.1.1
-jeepney==0.7.1
-Jinja2==3.0.3
-jmespath==0.10.0
-jsonschema==3.2.0
-keyring==23.5.0
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lockfile==0.12.2
-louis==3.20.0
-macaroonbakery==1.3.1
-Mako==1.1.3
-MarkupSafe==2.0.1
-mccabe==0.7.0
-monotonic==1.6
-more-itertools==8.10.0
-mypy==0.971
-mypy-extensions==0.4.3
-mysqlclient==1.4.6
-netaddr==0.8.0
-netifaces==0.11.0
-ntlm-auth==1.4.0
-oauthlib==3.2.0
-olefile==0.46
-packaging==21.3
-parameterized==0.8.1
-paramiko==2.9.3
-pexpect==4.8.0
-Pillow==9.2.0
-pluggy==1.0.0
-protobuf==3.12.4
-ptyprocess==0.7.0
-py==1.11.0
-pycairo==1.20.1
-pycodestyle==2.9.1
-pycryptodomex==3.11.0
-pycups==2.0.1
-pyflakes==2.5.0
-PyGObject==3.42.1
-PyJWT==2.3.0
-pykerberos==1.1.14
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyparsing==3.0.9
-pyRFC3339==1.1
-pyrsistent==0.18.1
-pytest==7.1.2
-pytest-django==4.5.2
-pytest-watch==4.2.0
-python-apt==2.3.0+ubuntu2.1
-python-dateutil==2.8.1
-python-debian===0.1.43ubuntu1
-python-dotenv==0.19.2
-pytz==2022.1
-pywinrm==0.3.0
-pyxdg==0.27
-PyYAML==5.4.1
-reportlab==3.6.8
-requests==2.25.1
-requests-kerberos==0.12.0
-requests-ntlm==1.1.0
-requests-toolbelt==0.9.1
-screen-resolution-extra==0.0.0
-SecretStorage==3.3.1
-selinux==3.3
-simplejson==3.17.6
-six==1.16.0
-sqlparse==0.4.2
-systemd-python==234
-texttable==1.6.4
-tomli==2.0.1
-typing_extensions==4.3.0
-ubuntu-advantage-tools==27.12
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.5
-usb-creator==0.3.7
-vboxapi==1.0
-wadllib==1.3.6
-watchdog==2.1.9
-websocket-client==1.2.3
-xdg==5
-xkit==0.0.0
-xmltodict==0.12.0
-zipp==1.0.0
+Django==4.1.4
+django-cors-headers==3.13.0
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+Pillow==9.3.0
+psycopg2==2.9.5
+PyJWT==2.6.0
+python-dotenv==0.21.0
+pytz==2022.6
+sqlparse==0.4.3
