--- a/.envexample
+++ b/.envexample
@@ -2,6 +2,11 @@ SECRET_KEY=XXXXXXXXXXXX
 
 DEBUG= FALSE TRUE
 
+
+AWS_BUCKET_NAME=CHANGE
+AWS_ACCESS_KEY=CHANGE
+AWS_SECRET_KEY=CHANGE
+
 DATABASE_USER=postgres
 DATABASE_NAME=appdjango
 DATABASE_HOST=localhost
