--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,27 @@
 asgiref==3.5.2
 asttokens==2.2.1
+async-generator==1.10
+attrs==22.2.0
 backcall==0.2.0
 boto3==1.26.36
 botocore==1.29.36
+certifi==2022.12.7
 decorator==5.1.1
 Django==4.1.4
 django-cors-headers==3.13.0
 django-storages==1.13.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+exceptiongroup==1.1.0
 executing==1.2.0
+h11==0.14.0
+idna==3.4
 ipdb==0.13.11
 ipython==8.7.0
 jedi==0.18.2
 jmespath==1.0.1
 matplotlib-inline==0.1.6
+outcome==1.2.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -25,14 +32,21 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.14.0
 PyJWT==2.6.0
+PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 pytz==2022.6
 s3transfer==0.6.0
+selenium==4.8.0
 six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
 sqlparse==0.4.3
 stack-data==0.6.2
 tomli==2.0.1
 traitlets==5.8.0
+trio==0.22.0
+trio-websocket==0.9.2
 urllib3==1.26.13
 wcwidth==0.2.5
+wsproto==1.2.0
