chng requirements.txt

--- a/.envexample
+++ b/.envexample
@@ -1,14 +1,19 @@
 SECRET_KEY=XXXXXXXXXXXX
 
-DEBUG= FALSE TRUE
-
-
 AWS_BUCKET_NAME=CHANGE
 AWS_ACCESS_KEY=CHANGE
 AWS_SECRET_KEY=CHANGE
 
-DATABASE_USER=postgres
-DATABASE_NAME=appdjango
-DATABASE_HOST=localhost
-DATABASE_PORT=5431
-DATABASE_PASSWORD=12345
+EMAIL_HOST_USER=@hotmail.com
+EMAIL_HOST_PASSWORD=dsadsa
+EMAIL_USE_TLS=True
+EMAIL_PORT=587
+EMAIL_HOST=SMTP.office365.com
+
+DATABASE_USER=dsa
+DATABASE_NAME=dsasaddsa
+DATABASE_HOST=dsadsad
+DATABASE_PORT=dsadsa
+DATABASE_PASSWORD=dsads
+
+
