--- a/.envexample
+++ b/.envexample
@@ -1,5 +1,5 @@
 SECRET_KEY=XXXXXXXXXXXX
-DEBUG=0
+DEBUG=1
 
 CORS_ALLOWED_ORIGINS= []
 
@@ -13,10 +13,8 @@ EMAIL_USE_TLS=True
 EMAIL_PORT=587
 EMAIL_HOST=SMTP.office365.com
 
-DATABASE_USER=dsa
-DATABASE_NAME=dsasaddsa
-DATABASE_HOST=dsadsad
-DATABASE_PORT=dsadsa
-DATABASE_PASSWORD=dsads
-
-
+DATABASE_USER=postgres
+DATABASE_NAME=db_app
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_PASSWORD=12345
