--- a/.envexample
+++ b/.envexample
@@ -14,7 +14,7 @@ EMAIL_PORT=587
 EMAIL_HOST=SMTP.office365.com
 
 DATABASE_USER=postgres
-DATABASE_NAME=db_app
-DATABASE_HOST=localhost
+DATABASE_NAME=appdb
+DATABASE_HOST=db_macedoazevedoapp
 DATABASE_PORT=5432
 DATABASE_PASSWORD=12345
