--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,32 @@ version: '3.8'
 services:
   macedoazevedoapp:
     container_name: macedoazevedoapp
-    build: .
+    image: macedoazevedoapp:latest
     ports:
       - "8000:8000"
+    stdin_open: true 
+    tty: true
     command: python manage.py runserver 0.0.0.0:8000
+    env_file: .env
     volumes:
-      - .:/code  
+      - ./code:/home/app
     depends_on:
-      - db_macedo_azevedo
+      - db_macedoazevedoapp
+
+  nginx_macedoazevedoapp:
+    container_name: nginx_macedoazevedoapp
+    build:
+      context: nginx/
+      dockerfile: Dockerfile
+    volumes:
+      - ./code/staticfiles:/home/app/staticfiles
+    ports:
+      - 80:80
+    depends_on:
+      - macedoazevedoapp
       
-  db_macedo_azevedo:
-    container_name: db_macedo_azevedo
+  db_macedoazevedoapp:
+    container_name: db_macedoazevedoapp
     image: postgres:latest
     volumes:
       - postgres_data:/var/lib/postgresql/data/
@@ -23,6 +38,16 @@ services:
       POSTGRES_USER: postgres
     ports:
       - "5431:5432"
+  
+  pgadmin:
+    container_name: pgadmin4_container
+    image: dpage/pgadmin4
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
+    ports:
+      - "5050:80"
 
 volumes:
   postgres_data:
