--- a/.envexample
+++ b/.envexample
@@ -3,9 +3,13 @@ DEBUG=1
 
 CORS_ALLOWED_ORIGINS= []
 
+#Aws Storage S3
+
 AWS_BUCKET_NAME=CHANGE
 AWS_ACCESS_KEY=CHANGE
 AWS_SECRET_KEY=CHANGE
+
+#Email Send
 
 EMAIL_HOST_USER=@hotmail.com
 EMAIL_HOST_PASSWORD=dsadsa
@@ -13,8 +17,13 @@ EMAIL_USE_TLS=True
 EMAIL_PORT=587
 EMAIL_HOST=SMTP.office365.com
 
+#Database
+
 DATABASE_USER=postgres
 DATABASE_NAME=appdb
 DATABASE_HOST=db_macedoazevedoapp
 DATABASE_PORT=5432
 DATABASE_PASSWORD=12345
+
+# Celery
+CELERY_BROKER_URL=pyamqp://guest@celery_broker//
