--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -2,6 +2,7 @@ Django==4.1.7
 django-cors-headers==3.14.0
 django-rest-framework==0.1.0
 django-rest-passwordreset==1.3.0
+django-easy-audit==1.3.3
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 Pillow==9.4.0
