--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -5,6 +5,7 @@ django-rest-passwordreset==1.3.0
 django-easy-audit==1.3.3
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+drf-nested-routers==0.93.4
 Pillow==9.4.0
 psycopg2==2.9.5
 python-decouple==3.7
