--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -4,6 +4,7 @@ django-rest-framework==0.1.0
 django-rest-passwordreset==1.3.0
 django-easy-audit==1.3.3
 djangorestframework==3.14.0
+django-rest-swagger==2.2.0
 djangorestframework-simplejwt==5.2.2
 drf-nested-routers==0.93.4
 Pillow==9.4.0
@@ -12,4 +13,8 @@ python-decouple==3.7
 python-dotenv==1.0.0
 selenium==4.8.2
 celery==5.2.7
+PyYAML==6.0
+uritemplate==4.1.1
 flower==1.2.0
+drf-yasg==1.21.5
+
