--- a/.envexample
+++ b/.envexample
@@ -20,7 +20,7 @@ EMAIL_HOST=SMTP.office365.com
 #Database
 
 DATABASE_USER=postgres
-DATABASE_NAME=appdb
+DATABASE_NAME=db_app
 DATABASE_HOST=db_macedoazevedoapp
 DATABASE_PORT=5432
 DATABASE_PASSWORD=12345
