--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
     environment:
       POSTGRES_PASSWORD: 12345
       POSTGRES_USER: postgres
+      POSTGRES_DB: db_app
     ports:
       - "5431:5432"
 
