--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -7,6 +7,7 @@ djangorestframework==3.14.0
 django-rest-swagger==2.2.0
 djangorestframework-simplejwt==5.2.2
 drf-nested-routers==0.93.4
+django-celery-beat==2.5.0
 Pillow==9.4.0
 psycopg2==2.9.5
 python-decouple==3.7
