--- a/.envexample
+++ b/.envexample
@@ -3,16 +3,26 @@ DEBUG=1
 
 CORS_ALLOWED_ORIGINS= []
 
-#Aws Storage S3
+# AWS
 
-AWS_BUCKET_NAME=CHANGE
-AWS_ACCESS_KEY=CHANGE
-AWS_SECRET_KEY=CHANGE
+AWS_ACCESS_KEY=CHANGE-ME
+AWS_REGION=CHANGE-ME
+AWS_SECRET_KEY=CHANGE-ME
+
+# AWS S3
+
+AWS_BUCKET_NAME=CHANGE-ME
+
+# AWS CloudWatch
+
+AWS_LOG_GROUP=CHANGE-ME
+AWS_LOG_STREAM_NAME=CHANGE-ME
+
 
 #Email Send
 
-EMAIL_HOST_USER=@hotmail.com
-EMAIL_HOST_PASSWORD=dsadsa
+EMAIL_HOST_USER=example@gmail.com
+EMAIL_HOST_PASSWORD=12345
 EMAIL_USE_TLS=True
 EMAIL_PORT=587
 EMAIL_HOST=SMTP.office365.com
@@ -20,10 +30,11 @@ EMAIL_HOST=SMTP.office365.com
 #Database
 
 DATABASE_USER=postgres
-DATABASE_NAME=postgres
+DATABASE_NAME=db_app
 DATABASE_HOST=db_macedoazevedoapp
 DATABASE_PORT=5432
 DATABASE_PASSWORD=12345
 
 # Celery
+
 CELERY_BROKER_URL=pyamqp://guest@rabbitmq_macedoazevedoapp//
