--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -11,6 +11,7 @@ django-rest-swagger==2.2.0
 djangorestframework-simplejwt==5.2.2
 django-celery-beat==2.5.0
 drf-nested-routers==0.93.4
+coverage==7.2.4
 Pillow==9.4.0
 psycopg2==2.9.5
 python-decouple==3.7
