--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,19 @@ services:
     depends_on:
       - rabbitmq_macedoazevedoapp
 
+  celery_flower_macedoazevedoapp:
+    container_name: celery_flower_macedoazevedoapp
+    image: macedoazevedoapp:latest
+    command: celery -A project flower
+    volumes:
+      - ./code:/home/app
+    ports:
+      - "5555:5555"
+    env_file: .env
+    restart: always
+    depends_on:
+      - rabbitmq_macedoazevedoapp
+
 volumes:
   postgres_data:
   pgadmindata:
