--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -11,6 +11,7 @@ django-rest-swagger==2.2.0
 djangorestframework-simplejwt==5.2.2
 django-celery-beat==2.5.0
 drf-nested-routers==0.93.4
+django-cleanup==7.0.0
 Pillow==9.4.0
 psycopg2==2.9.5
 psycopg2-binary==2.9.6
