--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ files/
 examples/
 docker-compose-test.yml
 code/celerybeat-schedule
-Aws/
+Build/
 code/htmlcov
 code/.coverage
 code/celerybeat-schedule
