--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -31,3 +31,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r code/requirements.txt
+  
+  deploy-fake: 
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy fake
+        run: echo Deploy Fake running
+      
