--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,4 +37,4 @@ jobs:
         run: ssh prod 'cd Macedo-Azevedo; git pull;'
 
       - name: Build and Run
-        run: ssh prod 'cd Macedo-Azevedo; make build_image; make build'
+        run: ssh prod 'cd Macedo-Azevedo; make build_image; make run_prod; make build'
