--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,9 +1,10 @@
 version: '3.8'
 
 services:
-  magunicorn:
-    container_name: magunicorn
-    image: magunicorn
+  macedoazevedoapp:
+    container_name: macedoazevedoapp
+    image: macedoazevedoapp
+    build: .
     ports:
       - "80:8000"
     stdin_open: true 
