--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,14 +10,20 @@ server {
     access_log /var/log/nginx/access.log;
 
     location / {
-        proxy_pass http://django_project;
+        proxy_pass http://app;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
+    
 
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+    location /static/ {
+        autoindex on;
+        alias /code/staticfiles
+    }
+
+    error_page   500 502 503 504  /maintence.html;
+    location = /maintence.html {
+        root   /usr/share/nginx/maintence.html;
     }
 }
