--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,54 @@ on:
     branches: [ "main" ]
 
 jobs:
+
+  build_ci:
+    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 4
+      matrix:
+        python-version: ["3.10"]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Dotenv Action
+        uses: falti/dotenv-action@v1.0.1
+        with:
+          path: .envexample
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r code/requirements.txt
+
+      - name: Run Tests
+        run: |
+          cd code; python manage.py test
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
+      run: |
+        docker login --username $DOCKERHUB_USERNAME --password $DOCKERHUB_PASSWORD
+        docker build . -t macedoazevedoapp:latest
+        docker tag macedoazevedoapp:latest macwdo/macedoazevedoapp:latest 
+        docker push macwdo/macedoazevedoapp:latest
+      env:
+        DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+        DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+
   deploy:
+    needs: build
     name: "Deploy to prod"
     runs-on: ubuntu-latest
 
@@ -29,12 +76,20 @@ jobs:
           SSH_USER: ${{ secrets.SSH_USER }}
           SSH_KEY: ${{ secrets.SSH_KEY }}
           SSH_HOST: ${{ secrets.SSH_HOST }}
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Login in Dockerhub
+        run: docker login --username $DOCKERHUB_USERNAME --password $DOCKERHUB_PASSWORD
+
+      - name: Pulling image from Dockerhub
+        run: docker pull macwdo/macedoazevedoapp:latest
 
       - name: Stop the server
         run: ssh prod 'cd Macedo-Azevedo; sudo make down;'
         
       - name: Update
-        run: ssh prod 'cd Macedo-Azevedo; git pull;'
+        run: ssh prod 'cd Macedo-Azevedo; sudo docker build macedoazevedoapp:latest'
 
       - name: Build and Run
         run: ssh prod 'cd Macedo-Azevedo; sudo make build_image; sudo make run_prod; sudo make build'
