--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -31,3 +31,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r code/requirements.txt
+
+      - name: Run Tests
+        run: |
+          cd code; python manage.py test
