--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: build_ci
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
