--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,22 +36,22 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_ci
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: |
-        docker login --username $DOCKERHUB_USERNAME --password $DOCKERHUB_PASSWORD
-        docker build . -t macedoazevedoapp:latest
-        docker tag macedoazevedoapp:latest macwdo/macedoazevedoapp:latest 
-        docker push macwdo/macedoazevedoapp:latest
-      env:
-        DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-        DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - uses: actions/checkout@v3
+      - name: Build the Docker image
+        run: |
+          docker login --username $DOCKERHUB_USERNAME --password $DOCKERHUB_PASSWORD
+          docker build . -t macedoazevedoapp:latest
+          docker tag macedoazevedoapp:latest macwdo/macedoazevedoapp:latest 
+          docker push macwdo/macedoazevedoapp:latest
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
 
 
   deploy:
+    runs-on: ubuntu-latest
     needs: build
     name: "Deploy to prod"
-    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Files
@@ -73,10 +73,12 @@ jobs:
           SSH_USER: ${{ secrets.SSH_USER }}
           SSH_KEY: ${{ secrets.SSH_KEY }}
           SSH_HOST: ${{ secrets.SSH_HOST }}
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Login in Dockerhub
         run: |
-          docker login --username $DOCKERHUB_USERNAME --password $DOCKERHUB_PASSWORD
+          ssh prod 'docker login --username $DOCKERHUB_USERNAME --password $DOCKERHUB_PASSWORD'
 
 
       - name: Pulling image from Dockerhub
