--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,16 +76,11 @@ jobs:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Login in Dockerhub
-        run: |
-          ssh prod 'docker login --username $DOCKERHUB_USERNAME --password $DOCKERHUB_PASSWORD'
-
-
-      - name: Pulling image from Dockerhub
-        run: docker pull macwdo/macedoazevedoapp:latest
-
       - name: Stop the server
         run: ssh prod 'cd Macedo-Azevedo; sudo make down;'
+
+      - name: Pulling image from Dockerhub
+        run: ssh prod 'docker pull macwdo/macedoazevedoapp:latest'
         
       - name: Update
         run: ssh prod 'cd Macedo-Azevedo; sudo docker build macedoazevedoapp:latest'
