--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,20 +10,14 @@ server {
     access_log /var/log/nginx/access.log;
 
     location / {
-        proxy_pass http://app;
+        proxy_pass http://localhost;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
     
-
     location /static/ {
         autoindex on;
-        alias /code/staticfiles
-    }
-
-    error_page   500 502 503 504  /maintence.html;
-    location = /maintence.html {
-        root   /usr/share/nginx/maintence.html;
+        alias home/app/staticfiles;
     }
 }
