--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -2,9 +2,8 @@ version: '3.8'
 
 services:
   macedoazevedoapp:
-    container_name: macedoazevedoapp
-    image: macedoazevedoapp
-    build: .
+    container_name: macwdo/macedoazevedoapp:latest
+    image: macwdo/macedoazevedoapp:latest
     ports:
       - "80:8000"
     stdin_open: true 
