--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,4 +83,4 @@ jobs:
         run: ssh prod 'docker pull macwdo/macedoazevedoapp:latest'
 
       - name: Build and Run
-        run: ssh prod 'sudo docker run --env-file ./.env macwdo/macedoazevedoapp:latest -d'
+        run: ssh prod 'sudo docker run --env-file ./.env -d macwdo/macedoazevedoapp:latest'
