--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,10 +71,22 @@ jobs:
           END
 
       - name: Creating .env file
-        run: ssh prod "echo '$ENV_VARIABLES' > ./.env"
+        run: |
+          echo "$ENV_VARIABLES" > ~/.env
+
+
+      - name: Copying .env file for Aws
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          source: "./.env"
+          target: "~/"
 
       - name: Down app and cleaning
-        run: ssh prod "if [ -n '$(docker ps -q)' ]; then docker kill $(docker ps -q); system prune --force"
+        run: ssh prod 'if [ -n "$(docker ps -q)" ]; then docker kill $(docker ps -q); system prune --force'
 
       - name: Pulling image from Dockerhub
         run: ssh prod "docker pull macwdo/macedoazevedoapp:latest"
