--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,17 +72,16 @@ jobs:
 
       - name: Creating .env file
         run: |
-          echo "$ENV_VARIABLES" > ~/.env
-
+          echo "$ENV_VARIABLES" > ~/envfile/.env
 
       - name: Copying .env file for Aws
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
+          host: $SSH_HOST
+          username: $SSH_USER
+          key: $SSH_KEY
           port: 22
-          source: "./.env"
+          source: "~/envfile/.env"
           target: "~/"
 
       - name: Down app and cleaning
