sending .env using scp creating envfile dir

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,6 +72,7 @@ jobs:
 
       - name: Creating .env file
         run: |
+          mkdir -p ~/envfile/
           echo "$ENV_VARIABLES" > ~/envfile/.env
 
       - name: Copying .env file for Aws
