--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,11 @@ jobs:
           END
 
 
+
       - name: Copying .env file for ec2
         run: |
+          mkdir -p ~/envfile/
+          cd ~/envfile/
           echo "$ENV_VARIABLES" > .env
 
       - uses: actions/checkout@v3
@@ -39,9 +42,8 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           port: 22
           key: ${{ secrets.SSH_KEY }}
-          source: ".env"
-          target: home/ubuntu
-  
+          source: "~/envfile/"
+          target: ~/
 
       - name: Down app and cleaning
         run: ssh prod 'if [ -n "$(docker ps -q)" ]; then docker kill $(docker ps -q); system prune --force'
