--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Copying .env file for ec2
         run: |
           mkdir -p ~/envfile/
-          echo "$ENV_VARIABLES" > ~/envfile/.env
+          echo "$ENV_VARIABLES" > ~/envfile/env.txt
 
       - name: copy file via ssh password
         uses: appleboy/scp-action@v0.1.4
@@ -40,7 +40,7 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           port: 22
           key: ${{ secrets.SSH_KEY }}
-          source: ~/envfile/.env
+          source: ~/envfile/env.txt
           target: "/home/ubuntu/"
 
       - name: Down app and cleaning
