lawsuit create and edit

--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,10 @@ files/
 examples/
 docker-compose-test.yml
 code/celerybeat-schedule
-Aws/
+Aws/**
 code/htmlcov
 code/.coverage
 code/celerybeat-schedule
-
 docker-files/
 
 #Project Files
