--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "yaml.schemas": {
         "https://json.schemastore.org/github-workflow.json": "file:///home/macwdo/codes/Macedo-Azevedo/.github/workflows/deploy.yml"
-    }
+    },
+    "python.analysis.typeCheckingMode": "basic"
 }
