--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,44 @@ on:
     branches: [ "main" ]
 
 jobs:
+
+  ci:
+    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 4
+      matrix:
+        python-version: ["3.10"]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Dotenv Action
+        uses: falti/dotenv-action@v1.0.1
+        with:
+          path: .envexample
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r code/requirements.txt
+
+  build:
+    runs-on: ubuntu-latest
+    needs: build_ci
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build the Docker image
+        run: |
+          docker login --username $DOCKERHUB_USERNAME --password $DOCKERHUB_PASSWORD
+          docker build . -t macedoazevedoapp:latest
+          docker tag macedoazevedoapp:latest macwdo/macedoazevedoapp:latest 
+          docker push macwdo/macedoazevedoapp:latest
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+
   deploy:
     runs-on: ubuntu-latest
     name: "Deploy to prod"
