--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
     "yaml.schemas": {
         "https://json.schemastore.org/github-workflow.json": "file:///home/macwdo/codes/Macedo-Azevedo/.github/workflows/deploy.yml"
     },
-    "python.analysis.typeCheckingMode": "basic"
+    "python.analysis.typeCheckingMode": "off"
 }
