build collect static in docker

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,3 +82,6 @@ jobs:
 
       - name: Up app
         run: ssh prod "docker run --env-file ./.env -p 80:8000 -d macwdo/macedoazevedoapp:latest"
+
+      - name: Collect static
+        run: ssh prod "docker exec -it macedoazevedoapp sh -c 'python manage.py collectstatic'"
