--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,7 +5,34 @@
 error_log /var/log/nginx/error.log;
 
 server {
-    listen       80;
+	listen 80;
+	listen [::]:80;
+
+    server_name app.macedoweb.com.br;
+
+	listen 443 ssl http2;
+	listen [::]:443 ssl http2;
+	ssl_certificate /etc/letsencrypt/live/app.macedoweb.com.br/fullchain.pem; # managed by Certbot
+	ssl_certificate_key /etc/letsencrypt/live/app.macedoweb.com.br/privkey.pem; # managed by Certbot
+	ssl_trusted_certificate /etc/letsencrypt/live/app.macedoweb.com.br/chain.pem;
+
+	ssl_session_cache shared:SSL:10m;
+	ssl_session_timeout 5m;
+
+	ssl_prefer_server_ciphers on;
+	ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+
+	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+
+	ssl_dhparam /etc/ssl/certs/dhparam.pem;
+
+	add_header Strict-Transport-Security "max-age=63072000; includeSubdomains";
+
+	ssl_stapling on;
+	ssl_stapling_verify on;
+	resolver 8.8.8.8 8.8.4.4 valid=300s;
+	resolver_timeout 5s;
+
     root   /www/data/;
     access_log /var/log/nginx/access.log;
 
