--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,7 +5,14 @@
 error_log /var/log/nginx/error.log;
 
 server {
-    listen       80;
+	listen 80;
+	listen [::]:80;
+
+    server_name app.macedoweb.com.br;
+
+	resolver 8.8.8.8 8.8.4.4 valid=300s;
+	resolver_timeout 5s;
+
     root   /www/data/;
     access_log /var/log/nginx/access.log;
 
