--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,33 +5,6 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: ["3.10"]
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Dotenv Action
-        uses: falti/dotenv-action@v1.0.1
-        with:
-          path: .envexample
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r code/requirements.txt
-
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -59,8 +32,11 @@ jobs:
           SSH_HOST: ${{ secrets.SSH_HOST }}
 
 
-      - name: Pulling github code
-        run: ssh prod "cd Macedo-Azevedo/; git pull;"
+      - name: Entering in directory
+        run: ssh prod "cd Macedo-Azevedo/"
+
+      - name: Git pull
+        run:  ssh prod "git pull"
 
       - name: Restarting service
         run: ssh prod "systemctl restart nginx | systemctl restart gunicorn"
