:sparkles: changes into makefile

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,7 +17,7 @@ server {
 
     location /static/ {
         autoindex on;
-        alias /code/staticfiles
+        alias /code/staticfiles;
     }
 
 }
